Fixed main page not showing other players work out history properly and other small tweaks.

--- a/default.css
+++ b/default.css
@@ -69,3 +69,10 @@ h1 {
     1px 25px 35px rgba(16,16,16,0.2),
     1px 30px 60px rgba(16,16,16,0.4);
 }
+
+/*for things that need to stand out*/
+
+.alert {
+    color:red;
+    font-weight:bold;
+}
